# japonfou_backend

./: Cargo.toml  README.md
.sqlx/: query-016ad66b291c5e05ab922370ed3ffd92dd39a3f4b4f8b7f07bb873279ef75534.json  query-33a048a658cf2579984d9d978d56ea1492683b19052f66c07e5359bc485a9925.json  query-33cb4dcbbd89442a0e0b0ba28e3c66ad04445400d1d354a5df37a41df088c3c0.json  query-4bc588affaa858e9caaed5fd521fbd204f8095beb4df6fcebf0b89d31e13c01b.json  query-e562ced5e97aa674632db40f9689db564baf7018fd1ec5c469e8c58e8ba341cd.json  query-e9e2331f3adeee4deabb85c486533594afe6f1af35f4c737292cddbe197c3377.json
configuration/: base.yaml
migrations/: 20221115004644_create_customers_table.sql  20221122064302_create_users_table.sql  20230110131709_create_products_table.sql  20230110132358_create_currencies_table.sql  20230117005757_create_order_items_table.sql  20230220025148_create_admin_user.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  errors.rs  lib.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: domain.rs  mod.rs  password.rs  repo.rs
src/repositories/: customer_repository.rs  mod.rs  order_item_repository.rs  product_repository.rs  user_repository.rs
src/routes/: mod.rs
src/routes/customer/: create.rs  domain.rs  mod.rs  repo.rs  route.rs
src/routes/login/: domain.rs  route.rs
src/routes/logout/: mod.rs  route.rs
src/routes/order_item/: domain.rs  mod.rs
src/routes/password/: domain.rs  mod.rs  route.rs
src/routes/product/: domain.rs  mod.rs  route.rs
tests/api/: change_password.rs  customers.rs  health_check.rs  helpers.rs  login.rs  logout.rs  main.rs  products.rs
