[package]
name = "japonfou"
version = "0.1.0"
edition = "2021"
authors = ["boris <boris.lok@outlok.com>"]

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "japonfou"

[dependencies]
anyhow = "1.0.71"
argon2 = { version = "0.5.0", features = ["std"] }
async-trait = "0.1.68"
axum = { version = "0.6.18", features = ["headers"] }
axum-extra = "0.7.4"
base64 = "0.21.0"
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
hyper = { version = "0.14.26", features = ["full"] }
itertools = "0.11.0"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
rand = "0.8.5"
redis = { version = "0.23.0", features = ["tokio-comp"] }
regex = "1.8.4"
rs-snowflake = "0.6.0"
rust_decimal = { version = "1.27.0", features = ["serde_json"] }
sea-query = { version = "0.28.5", features = ["derive", "postgres-types", "chrono", "with-chrono"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sqlx = { version = "0.6.3", features = ["all-types", "macros", "migrate", "offline", "postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["trace", "request-id", "util"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.4", features = ["v4"] }
validator = "0.16.1"

[dev-dependencies]
reqwest = { version = "0.11.18", features = ["json", "rustls-tls", "cookies"], default-features = false }
fake = "2.6.1"
