[package]
name = "japonfou"
version = "0.1.0"
edition = "2021"
authors = ["boris <boris.lok@outlok.com>"]

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "japonfou"

[dependencies]
anyhow = "1.0.75"
argon2 = { version = "0.5.2", features = ["std"] }
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["headers"] }
axum-extra = "0.7.7"
base64 = "0.21.4"
chrono = { version = "0.4.30", features = ["serde"] }
config = "0.13.3"
hyper = { version = "0.14.27", features = ["full"] }
itertools = "0.11.0"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
rand = "0.8.5"
redis = { version = "0.23.3", features = ["tokio-comp"] }
regex = "1.9.5"
rs-snowflake = "0.6.0"
rust_decimal = { version = "1.32.0", features = ["serde_json"] }
sea-query = { version = "0.30.1", features = [
  "derive",
  "postgres-types",
  "chrono",
  "with-chrono",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
sqlx = { version = "0.7.1", features = [
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "chrono",
  "rust_decimal",
  "uuid",
] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = [
  "trace",
  "request-id",
  "util",
  "cors",
] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4"] }
validator = "0.16.1"

[dev-dependencies]
reqwest = { version = "0.11.20", features = [
  "json",
  "rustls-tls",
  "cookies",
], default-features = false }
fake = "2.8.0"
