[package]
name = "japonfou"
version = "0.1.0"
edition = "2021"
authors = ["boris <boris.lok@outlok.com>"]

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "japonfou"

[dependencies]
anyhow = "1.0.81"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.73"
axum = { version = "0.7.5" }
axum-extra = "0.9.3"
base64 = "0.22.0"
chrono = { version = "0.4.30", features = ["serde"] }
config = "0.14.0"
hyper = { version = "1.2.0", features = ["full"] }
itertools = "0.12.1"
jsonwebtoken = "9.3.0"
once_cell = "1.18.0"
rand = "0.8.5"
redis = { version = "0.25.3", features = ["tokio-comp"] }
regex = "1.10.4"
rs-snowflake = "0.6.0"
rust_decimal = { version = "1.35.0", features = ["serde_json"] }
sea-query = { version = "0.30.7", features = [
  "derive",
  "postgres-types",
  "chrono",
  "with-chrono",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = [
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "chrono",
  "rust_decimal",
  "uuid",
] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
  "trace",
  "request-id",
  "util",
  "cors",
] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
validator = "0.18.0"

[dev-dependencies]
reqwest = { version = "0.12.3", features = [
  "json",
  "rustls-tls",
  "cookies",
], default-features = false }
fake = "2.9.2"
